--- a/supplemental_methods.qmd
+++ b/supplemental_methods.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Supplemental Materials for: Heat increment of feeding in the common bottlenose dolphin (*Tursiops truncatus*) is an insignificant quantity in estimating field metabolic rate"
+title: "Supplemental Materials for: Heat increment of feeding in the common bottlenose dolphin (*Tursiops truncatus*) is a minor quantity in estimating field metabolic rate"
 author:
   - name: I. Koliopoulou
     affiliations:
@@ -91,6 +91,9 @@ HIF_data <- read_xlsx('data/updated_data.xlsx',
                       .name_repair = 'unique_quiet') |>
   mutate(animal = factor(animal),
          day = factor(interaction(animal, date, drop = TRUE)),
+         # numeric version of binary sex variable 
+         # (this doesn't change model parameter estimates but
+         # eases later predictions from fitted model)
          is_male = if_else(sex == "M", 1,0))
 ```
 
@@ -115,7 +118,10 @@ HIF_model <- gam(oxygen_cons ~
                    s(animal, bs = "re") + 
                    s(day, bs = "re"),
                  data = HIF_data, 
+                 # to use ANOVA for hypothesis testing after model fitting
                  method = "ML", 
+                 # to avoid overfitting and allow penalization of smooths
+                 # to flat lines if needed
                  select = TRUE)
 ```
 
@@ -186,7 +192,7 @@ anova(HIF_model)
 
 ### Variance Term Estimation
 
-For random intercept terms, by analogy with the way that mixed-effect model results are usually reported and light of the fact that we wish to control for any individual or spatio-temporal effects rather than performing hypothesis testing for them, it is possible to report the standard variance components associated with each term. These are shown here in units of standard deviation. Note that since we used maximum-likelihood estimation, these estimates may be biased for finite sample size, but since variance term estimation is not the focus of inference (and smooth term hypothesis testing is) this seems like the right choice in our case. 
+For random intercept terms, by analogy with the way that mixed-effect model results are usually reported and light of the fact that we wish to control for any individual or day-to-day effects rather than performing hypothesis testing for them, it is possible to report the standard variance components associated with each term. They are shown below (in units of standard deviation). Note that since we used maximum-likelihood estimation, these estimates may be biased for finite sample size, but since variance term estimation is not the focus of inference (and smooth term hypothesis testing is) this seems like the right choice in our case. 
 
 ```{r}
 #| results: hide
@@ -217,9 +223,13 @@ vars
 
 ### Model prediction note
 
-A of visualizing the results of a GAM (or other regression model) is a prediction plot, where you select specific values at which to fix all the predictors other than `exact` time (age, proportion total calories, etc.) and then show predicted oxygen consumption given those values, and varying values of exact. Such a plot might be preferable to a partial plot because the y-axis is in terms of expected response variable values (in total, not a contribution to the whole from one predictor).
+A way of visualizing the results of a GAM (or other regression model) is a prediction plot, where you select specific values at which to fix all the predictors other than `exact` time (age, proportion total calories, etc.) and then show predicted oxygen consumption according to the model -- given those fixed values, and varying values of exact. Such a plot might be preferable to a partial plot because the y-axis is in terms of expected response variable values (in total, not a contribution to the whole from one predictor).
 
-We used marginal means of "other" predictors; in this approach quantitative predictors are set to the mean value observed in the data, and for categorical predictors a weighted average across the observed values is used. Random effects terms are not included, so that predictions are population-level (or, equivalently here, predictions for the typical dolphin on the typical day). The idea is to try to show the expected response value for "an average observation" (in some sense) in the actual data. For this reason, it may make the most sense as a set of predictions that can be overlaid on a plot of the data.
+We used marginal means of "other" predictors; in this approach quantitative predictors are set to the mean value observed in the data, and for categorical predictors a weighted average across the observed values is used. 
+
+Random effects terms are not included, so that predictions are population-level (or, equivalently here, predictions for the typical dolphin on the typical day). 
+
+The idea is to try to show the expected response value for "an average observation" (in some sense) in the population, given the actual sample data and assuming the data is a reasonable sample of the population of interest. So, it may make the some sense as a set of predictions that can be overlaid on a plot of the data.
 
 ### Marginal Means of Model Variables
 
@@ -249,7 +259,13 @@ tbl_summary(
 
 
 ### Uncertainty Estimation
-To compute model-predicted oxygen consumption and total oxygen consumption (area under the curve), all with uncertainty, we could employ a resampling-based approach.
+To compute model-predicted oxygen consumption and total oxygen consumption (area under the curve), all with uncertainty, we can employ a resampling-based approach.
+
+We use `mgcv::gam.mh()` to draw samples of model parameter values via Metropolis-Hastings sampling from the posterior.
+
+We obtain a linear-predictor matrix from the fitted model, which when post-multiplied by a vector of candidate parameter values, yields predictions from the fitted model for the chosen mean values of predictor variables (and varying values of `exact` time).
+
+By generating these predictions for many parameter samples, we can obtain model predictions and derived quantities with uncertainty (here, percentile-based confidence intervals and standard errors are computed).
 
 ```{r}
 nsim <- 10000
@@ -406,119 +422,6 @@ oxygen_time_plot <- ggplot(HIF_data,
 
 print(oxygen_time_plot)
 ```
-
-# Breathing Frequency Model
-
-Based on the discussion in the manuscript, I think maybe this is what we need...
-
-Methods would say,
-
->> We also fitted a normal GAM to quantify the association (if any) between the dependent variable tidal volume and breathing frequency, even after accounting for any effects of oxygen consumption on tidal volume. The model included smooths of breathing frequency and oxygen consumptions as well as time since feeding, energy intake, age, and body mass, plus the categorical predictor sex and random effects of animal ID and day of trial. Settings, including basis type and dimension, were all the same as for the oxygen consumption GAM.
-
-```{r}
-breath_model <- gam(tidal_vol ~ s(Breath_freq, bs = "ts", k = 4) + 
-                      # s(oxygen_cons, bs = "ts", k = 4) +
-                      s(exact, bs = "ts", k = 4) + 
-                      s(age, bs = "ts", k = 4) + 
-                      s(body_mass, bs = "ts", k = 4) + 
-                      s(percentdailytotal, k = 4, bs = "ts") + 
-                      # s(pool_temp, k = 4, bs = "ts") +
-                      # sex +
-                      # random effects 
-                      s(animal, bs = "re") + 
-                      s(day, bs = "re"), data = HIF_data)
-```
-
-Standard model summary output from `gam()`:
-
-```{r}
-summary(breath_model)
-```
-
-A prettier model summary table:
-
-```{r}
-tbl_regression(breath_model)
-```
-
-## Model Checking
-
-Below are `mgcv` package checks for GAMs, presented mainly to view model convergence and basis dimension checking results.
-
-```{r}
-#| label: gam-check-breath
-#| fig-show: "hide"
-
-gam.check(breath_model)
-```
-
-### Residual Histogram
-
-This graph allows us to verify the residual normality condition.
-
-```{r}
-#| label: residual-histogram-breath
-
-gf_dhistogram(~resid(breath_model), bins = 15) |> 
-  gf_fitdistr(dist = "dnorm")
-```
-
-### Scaled Residual Plot
-
-The scaled residual plot (Hartig, 2024) allows verification that the mean-variance relationship is as expected, particularly for mixed-effect models and generalized linear models. If all is well, scaled residuals will be trendless and will have uniform spread between 0-1 for all fitted values.
-
-```{r}
-#| label: scaled-resids-breath
-#| message: false
-
-plotResiduals(simulateResiduals(breath_model), quantreg = FALSE)
-```
-
-### Residual ACF Plot
-
-The ACF plot allows us to verify the residual independence condition.
-
-```{r}
-#| label: residual-acf-breath
-
-acf(resid(breath_model))
-```
-
-## Model Interpretation
-
-### Hypothesis Testing
-
-Type II ANOVA allows us to test the null hypothesis of no association with the response, for each predictor (and interaction) included in the model.
-
-```{r}
-anova(breath_model)
-```
-
-The main result here is the p-value for `Breath_freq`, which is very small (6.7e-5). We can interpret this as strong evidence that tidal volume and breathing frequency are associated, (even after controlling for possible effets of time since feeding, age, mass, food amount, temperature, individual and trial day).
-
-### Visualization
-
-Candidate for Figure 3?
-
-```{r}
-#| label: tidal-vol-vs-breath
-
-gf_point(tidal_vol ~ Breath_freq,
-         color = ~oxygen_cons,
-         data = HIF_data)
-```
-
-
-What the model says (for average of all predictors in the dataset)
-
-```{r}
-#| label: breath-model-preds
-
-predict_response(breath_model, terms = c("Breath_freq"),
-                 condition = list(exact = 0)) |>
-  plot() 
-```
-
 
 # References
 
