--- a/supplemental_methods.qmd
+++ b/supplemental_methods.qmd
@@ -54,6 +54,7 @@ format:
     embed-resources: true
   typst: default
 toc: true
+fig-dpi: 300
 editor: source
 ---
 
@@ -78,8 +79,9 @@ knitr::opts_chunk$set(echo = TRUE,
                       fig.width = 6,
                       fig.height = 4.5,
                       fig.path = "figures/HIF-",
-                      dev = "jpeg",
-                      dpi = 300)
+                      dpi = 300,                     
+                      dev = c("CairoJPEG", "pdf")
+                      )
 
 theme_set(theme_minimal(base_size = 12))
 ```
